# emogen

./: CMakeLists.txt
src/: CMakeLists.txt
src/dataset/: CMakeLists.txt  datasetFeatures.py  datasetInit.py  datasetTrain.py  datasetVerifyPrediction.py  example_dataset.cfg  gui.py  train_models.py
src/detector/: ANNEmoDetector.cpp  ANNEmoDetector.h  CMakeLists.txt  EmoDetector.cpp  EmoDetector.h  FacePreProcessor.cpp  FacePreProcessor.h  SVMEmoDetector.cpp  SVMEmoDetector.h  emo_detector_cli.cpp
src/facedetector/: FaceDetector.cpp  FaceDetector.h  facecrop_cli.cpp
src/gaborbank/: GaborBank.cpp  GaborBank.h  GaborKernel.h  gaborbank_cli.cpp
src/gui/: ACapture.cpp  ACapture.h  AGui.cpp  AGui.h  CMakeLists.txt  EmogenGui.cpp  EmogenGui.h  VideoCapture.cpp  VideoCapture.h  WebcamCapture.h  emogengui_cli.cpp
src/training/: ANNClassifier.cpp  ANNClassifier.h  CMakeLists.txt  Classifier.cpp  Classifier.h  SVMClassifier.cpp  SVMClassifier.h  TrainingParameters.h  train_cli.cpp
src/utils/: string_utils.cpp  string_utils.h
